Bug 18817 "autodetection of content-type used": in strict mode, requires the mime type to be specified if the style sheet doesn't have a '.css' extension (otherwise the style sheet is ignored).